--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <div id='page'></div>
-  <p>Express web page! With CI! Demoooooo!</p>
+  <p>Express web page! With CI! Lame!</p>
 
 </body>
 </html>
